Closed Bug 1701390 Opened 4 years ago Closed 4 years ago

Crash in [@ nsDisplayWrapList::nsDisplayWrapList]

Categories

(Core :: Web Painting, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 --- fixed

People

(Reporter: aryx, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

All crashes on Linux at the moment. They are from assertions added in bug 1700812.

Be aware of the fact bug 1523500 got backed out which touched much code in the vicinity.

Crash report: https://crash-stats.mozilla.org/report/index/3e54a5ab-8b10-4758-8d34-79e6b0210327

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (item should have finite clip with respect to aASR)

Top 10 frames of crashing thread:

0 libxul.so nsDisplayWrapList::nsDisplayWrapList layout/painting/nsDisplayList.cpp:5395
1 libxul.so nsDisplayOpacity::nsDisplayOpacity layout/painting/nsDisplayList.cpp:5649
2 libxul.so nsIFrame::BuildDisplayListForStackingContext layout/generic/nsIFrame.cpp:3583
3 libxul.so nsIFrame::BuildDisplayListForChild layout/generic/nsIFrame.cpp:4206
4 libxul.so nsBlockFrame::BuildDisplayList layout/generic/nsBlockFrame.cpp:7062
5 libxul.so nsIFrame::BuildDisplayListForChild layout/generic/nsIFrame.cpp:4030
6 libxul.so mozilla::ScrollFrameHelper::BuildDisplayList layout/generic/nsGfxScrollFrame.cpp:3951
7 libxul.so nsIFrame::BuildDisplayListForChild layout/generic/nsIFrame.cpp:4257
8 libxul.so nsBlockFrame::BuildDisplayList layout/generic/nsBlockFrame.cpp:7062
9 libxul.so nsIFrame::BuildDisplayListForChild layout/generic/nsIFrame.cpp:4030
Flags: needinfo?(tnikkel)

(In reply to Sebastian Hengst [:aryx] (needinfo on intermittent or backout) from comment #0)

Be aware of the fact bug 1523500 got backed out which touched much code in the vicinity.

Bug 1523500 is innocent, these crashes are all bug 1700812.

Flags: needinfo?(tnikkel)
No longer depends on: 1700812
Regressed by: 1700812
Has Regression Range: --- → yes
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED

We've got enough data from this and we have a reproducible bug to investigate (bug 1701361) so we can back this out.

I also got this crash on https://kaiyo.com/.

Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b3322ad4836f Revert all of the asserts change in bug 1700812 back to debug asserts. r=mstange
Pushed by csabou@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/a1de64fd7866 Revert all of the asserts change in bug 1700812 back to debug asserts. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: