Bug 1701390. Revert all of the asserts change in bug 1700812 back to debug asserts. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D110015