layout/painting/FrameLayerBuilder.cpp
@@ -5645,7 +5645,7 @@ static OpaqueRegionEntry* FindOpaqueRegionEntry(
 static const ActiveScrolledRoot* FindDirectChildASR(
     const ActiveScrolledRoot* aParent, const ActiveScrolledRoot* aDescendant) {
   MOZ_ASSERT(aDescendant, "can't start at the root when looking for a child");
-  MOZ_DIAGNOSTIC_ASSERT(ActiveScrolledRoot::IsAncestor(aParent, aDescendant));
+  MOZ_ASSERT(ActiveScrolledRoot::IsAncestor(aParent, aDescendant));
   const ActiveScrolledRoot* directChild = aDescendant;
   while (directChild->mParent != aParent) {
     directChild = directChild->mParent;
